--- a/HelloWorld/manifest.json
+++ b/HelloWorld/manifest.json
@@ -1,16 +1,12 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
+  "name": "Hello World",
   "description": "This extension shows a Google Image search result for the current page",
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon16.png",
     "default_popup": "popup.html"
-  },
-  "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
-  ]
+  }
 }
