--- a/HelloWorld/manifest.json
+++ b/HelloWorld/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Hello World Demo",
-  "description": "This extension shows a Google Image search result for the current page",
+  "description": "A hello world extension!",
   "version": "1.0",
   "icons": {
     "128": "icon128.png",
