--- a/BudgetManager/manifest.json
+++ b/BudgetManager/manifest.json
@@ -16,5 +16,7 @@
   "browser_action": {
     "default_icon": "icon16.png",
     "default_popup": "popup.html"
-  }
+  },
+
+  "options_page": "options.html"
 }
