Ext working with window popup

--- a/Wikit/manifest.json
+++ b/Wikit/manifest.json
@@ -11,8 +11,8 @@
   },
 
   "browser_action": {
-    "default_icon": "icon16.png",
-    "default_popup": "popup.html"
+    "default_icon": "icon16.png"
+   
   },
 
   "background": {
@@ -20,7 +20,8 @@
     "persistent": false
   },
 
-  "permissions": [        
+  "permissions": [  
+          "tabs",      
           "contextMenus"
         ]
 }
