--- a/Speak/manifest.json
+++ b/Speak/manifest.json
@@ -18,17 +18,6 @@
   "permissions": [  
           "tabs",      
           "contextMenus",
-          "ttsEngine"
-        ],
-
-  "tts_engine": {
-          "voices": [
-            {
-              "voice_name": "Alice",
-              "lang": "en-US",
-              "gender": "female",
-              "event_types": ["start", "marker", "end"]
-            }
-          ]
-        }
+          "tts"
+        ]
 }
